--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <h1>I miei lavori</h1>
   <ul>
-    <li><a href="https://tuonome.github.io/progetto1" target="_blank">Progetto 1</a></li>
+    <li><a href="Nuova cartella (3)/index.html" target="_blank">Progetto 1</a></li>
     <li><a href="https://tuonome.github.io/progetto2" target="_blank">Progetto 2</a></li>
     <li><a href="https://github.com/tuonome/altraprova" target="_blank">Repo su GitHub</a></li>
   </ul>
