--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <h1>I miei lavori</h1>
   <ul>
     <li><a href="Nuova cartella (3)/index.html" target="_blank">Progetto 1</a></li>
+    <li><a href="Nuova cartella (2)/index.html" target="_blank">Progetto 1</a></li>
   </ul>
 </body>
 </html>
