--- a/Nuova cartella (3)/index.html
+++ b/Nuova cartella (3)/index.html
@@ -2,85 +2,61 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Anagrafica Utente Semplificata</title>
-
+  <title>Calcola Generazione</title>
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      margin: 20px; 
+    body {
+      font-family: Arial, sans-serif;
+      margin: 30px;
     }
 
-    label { 
-      display: block; 
-      margin-top: 10px; 
+    label, input, button {
+      display: block;
+      margin-top: 10px;
     }
 
-    input { 
-      width: 300px; 
-      padding: 5px; 
+    input {
+      padding: 5px;
+      width: 150px;
     }
 
-    button { 
-      margin-top: 15px; 
-      padding: 10px 20px; 
+    button {
+      margin-top: 15px;
+      padding: 8px 15px;
     }
 
-    #risultato { 
-      margin-top: 20px; 
-      padding: 10px; 
-      background-color: #f0f0f0; 
-      border: 1px solid #ccc; 
+    #risultato {
+      margin-top: 20px;
+      padding: 10px;
+      background: #f8f8f8;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
 
-  <h2>Inserisci i dati anagrafici</h2>
+  <h2>Scopri la tua generazione</h2>
 
-  <form id="anagraficaForm">
-    <label>Nome: <input type="text" id="nome" required></label>
-    <label>Cognome: <input type="text" id="cognome" required></label>
-    <label>Indirizzo: <input type="text" id="indirizzo" required></label>
-    <label>Città: <input type="text" id="citta" required></label>
-    <label>CAP: <input type="text" id="cap" pattern="\d{5}" required></label>
-    <label>Anno di nascita: <input type="number" id="annoNascita" min="1900" max="2025" required></label>
+  <label for="annoNascita">Inserisci il tuo anno di nascita:</label>
+  <input type="number" id="annoNascita" min="1900" max="2025" required>
 
-    <button type="submit">Invia</button>
-  </form>
+  <button id="calcolaBtn">Calcola</button>
 
   <div id="risultato"></div>
 
   <script>
-    // Prendiamo il form e ascoltiamo quando l’utente clicca su “Invia”
-    document.getElementById("anagraficaForm").addEventListener("submit", function(event) {
-      // Evita che la pagina si ricarichi
-      event.preventDefault();
 
-      // Prendiamo i valori inseriti nei campi
-      const nome = document.getElementById("nome").value.trim();
-      const cognome = document.getElementById("cognome").value.trim();
-      const indirizzo = document.getElementById("indirizzo").value.trim();
-      const citta = document.getElementById("citta").value.trim();
-      const cap = document.getElementById("cap").value.trim();
+    document.getElementById("calcolaBtn").addEventListener("click", function() {
       const anno = parseInt(document.getElementById("annoNascita").value);
+      const annoCorrente = 2025;
+      const risultatoDiv = document.getElementById("risultato");
 
-      // Calcoliamo l’anno attuale
-      const annoCorrente = new Date().getFullYear();
-
-      // Controllo che l’anno sia valido
-      if (isNaN(anno) || anno < 1900 || anno > annoCorrente) {
-        document.getElementById("risultato").innerHTML = 
-          "⚠️ Inserisci un anno valido tra 1900 e " + annoCorrente;
+      if (anno < 1900 || anno > annoCorrente) {
+        risultatoDiv.textContent = "⚠️ Inserisci un anno valido tra 1900 e " + annoCorrente;
         return;
       }
 
-      // Calcolo dell’età
-      const eta = annoCorrente - anno;
-
-      // Variabile per salvare il nome della generazione
       let generazione = "";
 
-      // Determiniamo la generazione con uno switch
       switch (true) {
         case (anno >= 2013):
           generazione = "Generazione Alpha";
@@ -107,21 +83,7 @@
           generazione = "Non classificata";
       }
 
-      // Creiamo il testo da mostrare
-      const risultato = `
-        <h3>Dati inseriti:</h3>
-        <p><strong>Nome:</strong> ${nome}</p>
-        <p><strong>Cognome:</strong> ${cognome}</p>
-        <p><strong>Indirizzo:</strong> ${indirizzo}</p>
-        <p><strong>Città:</strong> ${citta}</p>
-        <p><strong>CAP:</strong> ${cap}</p>
-        <p><strong>Anno di nascita:</strong> ${anno}</p>
-        <p><strong>Età:</strong> ${eta} anni</p>
-        <p><strong>Generazione:</strong> ${generazione}</p>
-      `;
-
-      // Mostriamo il risultato dentro il div
-      document.getElementById("risultato").innerHTML = risultato;
+      risultatoDiv.textContent = "👉 Appartieni alla: " + generazione;
     });
   </script>
 
