--- a/Nuova cartella (3)/index.html
+++ b/Nuova cartella (3)/index.html
@@ -51,12 +51,9 @@
   <div id="risultato"></div>
 
   <script>
-    // Prendiamo il form e ascoltiamo quando l’utente clicca su “Invia”
     document.getElementById("anagraficaForm").addEventListener("submit", function(event) {
-      // Evita che la pagina si ricarichi
       event.preventDefault();
 
-      // Prendiamo i valori inseriti nei campi
       const nome = document.getElementById("nome").value.trim();
       const cognome = document.getElementById("cognome").value.trim();
       const indirizzo = document.getElementById("indirizzo").value.trim();
@@ -64,23 +61,19 @@
       const cap = document.getElementById("cap").value.trim();
       const anno = parseInt(document.getElementById("annoNascita").value);
 
-      // Calcoliamo l’anno attuale
       const annoCorrente = new Date().getFullYear();
 
-      // Controllo che l’anno sia valido
+
       if (isNaN(anno) || anno < 1900 || anno > annoCorrente) {
         document.getElementById("risultato").innerHTML = 
-          "⚠️ Inserisci un anno valido tra 1900 e " + annoCorrente;
+          "Inserisci un anno valido tra 1900 e " + annoCorrente;
         return;
       }
 
-      // Calcolo dell’età
       const eta = annoCorrente - anno;
 
-      // Variabile per salvare il nome della generazione
       let generazione = "";
 
-      // Determiniamo la generazione con uno switch
       switch (true) {
         case (anno >= 2013):
           generazione = "Generazione Alpha";
@@ -107,7 +100,6 @@
           generazione = "Non classificata";
       }
 
-      // Creiamo il testo da mostrare
       const risultato = `
         <h3>Dati inseriti:</h3>
         <p><strong>Nome:</strong> ${nome}</p>
@@ -120,10 +112,10 @@
         <p><strong>Generazione:</strong> ${generazione}</p>
       `;
 
-      // Mostriamo il risultato dentro il div
       document.getElementById("risultato").innerHTML = risultato;
     });
   </script>
 
 </body>
 </html>
+
