--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 <body>
   <h1>I miei lavori</h1>
   <ul>
-    <li><a href="Nuova cartella (3)/index.html" target="_blank">Progetto 1</a></li>
-    <li><a href="array.html" target="_blank">Progetto 2</a></li>
+    <li><a href="Nuova cartella (3)/index.html" target="_blank">Anagrafica</a></li>
+    <li><a href="array.html" target="_blank">Array</a></li>
+    <li><a href="Anagrafica_2.0.html" target="_blank">Anagrafica 2.0</a></li>
   </ul>
 </body>
 </html>
