--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <li><a href="Nuova cartella (3)/index.html" target="_blank">Anagrafica</a></li>
     <li><a href="array.html" target="_blank">Array</a></li>
     <li><a href="Anagrafica_2.0.html" target="_blank">Anagrafica 2.0</a></li>
+    <li><a href="Anagrafica_3.0.html " target="_blank">Anagrafica 3.0</a></li>
   </ul>
 </body>
 </html>
